[package]
name = "exeio"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec"] }
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
dirs = "6.0.0"
